# drnsf

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  AUTHORS.md  CMakeLists-imgui.txt  CMakeLists.txt  README.md  appveyor.yml
data/: cube_vert.glsl  drnsf.py  frameonly.frag  frameonly.vert  meshframe.frag  meshframe.vert  meshframe_quad.vert  meshframe_triangle.vert  reticle.frag  reticle.vert  widget_im.frag  widget_im.vert
data/shaders/frameonly_fig/: fragment.glsl  vertex.glsl
data/shaders/highlight/: fragment.glsl  vertex.glsl
data/shaders/imgui/: fragment.glsl  vertex.glsl
data/shaders/meshframe_fig/: fragment.glsl  quad.glsl  triangle.glsl  vertex.glsl
data/shaders/reticle_fig/: fragment.glsl  vertex.glsl
data/shaders/zone_box_fig/: vertex.glsl
data/shaders/zone_octree_fig/: fragment.glsl  vertex.glsl
docs/: automatic_deps.md  build_options.md
expr/: scripting.rst
extra/: build_win32_deps.sh  glm_license.txt
extra/autodep_licenses/: zlib.txt
extra/windows_batch_helpers/: cdxa-imprint-eur.cmd  cdxa-imprint-jap.cmd  cdxa-imprint-usa.cmd  dump-gl.cmd
modules/: CMakeLists.txt  assets_window.cc  begin.hh  mod_modctl.cc
modules/asset_editors/: gfx_frame.cc  gfx_model.cc
modules/legacy/: mod_camera_ctrl.cc  mod_imgui_demo.cc  mod_testbox.cc  mod_undo.cc
modules/panels/: asset_list.cc
res/: im_frag.glsl  im_vert.glsl
src/: buildconfig.hh  cmd_cdxa_imprint.cc  cmd_dump_gl.cc  cmd_gui.cc  cmd_help.cc  cmd_internal_test.cc  cmd_resave_test.cc  cmd_version.cc  common.hh  core.cc  core.hh  core_argparser.cc  core_main.cc  edit.hh  edit_asset_editor.cc  edit_asset_infoview.cc  edit_asset_metactl.cc  edit_asset_propctl.cc  edit_asset_propview.cc  edit_asset_tree.cc  edit_asset_viewctl.cc  edit_asset_viewport.cc  edit_assets_view.cc  edit_assettool.cc  edit_assettool_3d.hh  edit_assettool_main.hh  edit_assettool_new.hh  edit_assettool_props.hh  edit_assettool_widget.cc  edit_base_window.cc  edit_classic_view.cc  edit_context.cc  edit_core.cc  edit_detail_view.cc  edit_editor.cc  edit_editor2.cc  edit_field.cc  edit_im_canvas.cc  edit_main_view.cc  edit_main_window.cc  (+114 more)
src/frontend/winapi/: gl.cc  gui_command.cc  gui_file_dialog.cc  gui_menu.cc  gui_menubar.cc
src/frontend/x11/: gl.cc
tools/: automatic_deps_win32.cmake  embedgen.c  embedgen.py  test_arch_i386.c  test_arch_x86_64.c
